# d3cv_handbook

./: .gitignore  Cargo.toml
chap2/: exer1.py  lsm.py
src/chap2/: lsm.rs
src/chap2/libs/: lib3d.rs  mod.rs
