[package]
name = "d3cv_handbook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "lsm"
path = "src/chap2/lsm.rs"


[dependencies]
image = "0.23.14"
imageproc = "0.22.0"

ndarray = "0.14"
ndarray-linalg = { version = "0.13", features = ["openblas-system"] }